force-app/main/default/objects/nFORCE__System_Properties__c/fields/nFORCE__Description__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Description__c</fullName>
    <description>This field is optional. It is manually populated. It describes the system property in more depth.</description>
    <inlineHelpText>Description of the custom setting implemented in order to describe the Category and System Property.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>