force-app/main/default/objects/nFORCE__System_Properties__c/fields/nFORCE__Institution_ID__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Institution_ID__c</fullName>
    <description>This text field contains the Institution ID for custom settings that apply to a specific institution. If the custom setting does not relate to institution configuration, leave this field blank. Manually populate this field with the institution ID to associate the custom setting with that institution. The custom setting cloning script documented in Customer Engagement Solution configuration documentation autopopulates Institution ID when appropriate.</description>
    <inlineHelpText>Leave blank if custom setting does not apply to a specific institution. If custom setting applies to a specific institution, manually populate with Institution ID If not already autopopulated.</inlineHelpText>
    <label>Institution ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>