force-app/main/default/objects/nFORCE__System_Properties__c/fields/nFORCE__Key__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Key__c</fullName>
    <description>The field is required. The combination of the category and the key is used to uniquely identify the system property.</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>