force-app/main/default/objects/nFORCE__System_Properties__c/fields/nFORCE__Value__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Value__c</fullName>
    <description>The field is required. It indicates the value of the system property. The field controls the behaviour of the application.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>