force-app/main/default/objects/nFORCE__System_Properties__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>nFORCE__Category_Name__c</columns>
    <columns>nFORCE__Key__c</columns>
    <columns>nFORCE__Value__c</columns>
    <columns>nFORCE__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>